--- a/index.html
+++ b/index.html
@@ -3,66 +3,64 @@
 
 <head>
 
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, shrink-to-fit=no, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, shrink-to-fit=no, initial-scale=1">
+  <meta name="description" content="">
+  <meta name="author" content="">
 
-    <title>Simple Sidebar - Start Bootstrap Template</title>
+  <title>Simple Sidebar - Start Bootstrap Template</title>
 
-    <!-- Bootstrap Core CSS -->
-    <link href="./assets/css/bootstrap.min.css" rel="stylesheet">
+  <!-- Bootstrap Core CSS -->
+  <link href="./assets/css/bootstrap.min.css" rel="stylesheet">
 
-    <!-- Custom CSS -->
-    <link href="./assets/css/style.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+  <!-- Custom CSS -->
+  <link href="./assets/css/style.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
 </head>
+
 <body>
 
 
 
   <div id="wrapper">
 
-        <!-- Sidebar -->
-        <div id="sidebar-wrapper">
-            <ul class="sidebar-nav">
-                <li class="sidebar-brand">
-                    <a href="#">
-                        Start Bootstrap
-                    </a>
-                </li>
-                <li>
-                    <a href="#" class="fa fa-dashboard"> <span class="active text-style">Dashboard</span></a>
-                </li>
-                <li>
-                    <a href="#" class="fa fa-cut"> <span class="text-style">Shortcuts</span></a>
-                </li>
-                <li>
-                    <a href="#" class="fa fa-eye"> <span class="text-style">Overview</span></a>
-                </li>
-                <li>
-                    <a href="#" class="fa fa-calendar-plus-o"> <span class="text-style"> Events</span></a>
-                </li>
-                <li>
-                    <a href="#" class="fa fa-star-o"> <span class="text-style"> About</span></a>
-                </li>
-                <li>
-                    <a href="#" class="fa fa-home"> <span class="text-style"> Services</span></a>
-                </li>
-                <li>
-                    <a href="#" class="fa fa-home"> <span class="text-style"> Contact</span></a>
-                </li>
-            </ul>
-        </div>
-        <!-- /#sidebar-wrapper -->
+    <!-- Sidebar -->
+    <div id="sidebar-wrapper">
+      <ul class="sidebar-nav">
+        <div class="sidebar-brand text-center"> Start Bootstrap</div>
 
-        <!-- Page Content -->
-        <div id="page-content-wrapper">
-              <nav class="navbar navbar-default navbar-static-top" role="navigation">
-    <div class="container-fluid">
-        <div class="navbar-header">
+        <li>
+          <a class="current-parent current active" href="#" data-placement="right" title="" data-original-title="Start"> <i class="fa fa-dashboard fa-fw"></i> <span class="menu_title"> Dashboard</span></a>
+        </li>
+        <li>
+          <a class="current-parent current" href="#" data-placement="right" title="" data-original-title="Start"> <i class="fa fa-cut"></i> <span class="menu_title"> Shortcuts</span></a>
+        </li>
+        <li>
+          <a class="current-parent current" href="#" data-placement="right" title="" data-original-title="Start"> <i class="fa fa-eye"></i> <span class="menu_title"> Overview</span></a>
+        </li>
+        <li>
+          <a class="current-parent current" href="#" data-placement="right" title="" data-original-title="Start"> <i class="fa fa-calendar-plus-o"></i> <span class="menu_title"> Events</span></a>
+        </li>
+        <li>
+          <a class="current-parent current" href="#" data-placement="right" title="" data-original-title="Start"> <i class="fa fa-star-o"></i> <span class="menu_title"> About</span></a>
+        </li>
+        <li>
+          <a class="current-parent current" href="#" data-placement="right" title="" data-original-title="Start"> <i class="fa fa-home"></i> <span class="menu_title"> Services</span></a>
+        </li>
+        <li>
+          <a class="current-parent current active" href="#" data-placement="right" title="" data-original-title="Start"> <i class="fa fa-home"></i> <span class="menu_title"> Contact</span></a>
+        </li>
+      </ul>
+    </div>
+    <!-- /#sidebar-wrapper -->
+
+    <!-- Page Content -->
+    <div id="page-content-wrapper">
+      <nav class="navbar navbar-default navbar-static-top" role="navigation">
+        <div class="container-fluid">
+          <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
                 <span class="sr-only">Toggle navigation</span>
                 <span class="icon-bar"></span>
@@ -70,44 +68,45 @@
                 <span class="icon-bar"></span>
             </button>
             <a class="navbar-brand" href="#menu-toggle" id="menu-toggle"><span class="fa fa-align-justify" aria-hidden="true"></span></a>
-        </div>
-        <div id="navbar" class="navbar-collapse collapse">
+          </div>
+          <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="#"><span class="fa fa-home" aria-hidden="true"></span> Home</a></li>
-				<li><a href="#"><span class="fa fa-comment-o" aria-hidden="true"></span> Messages </a></li>
-             	<li><a href="#"><span class="fa fa-question-circle" aria-hidden="true"></span> Help</a></li>
-                <li><a href="#"><span class="fa fa-sign-out" aria-hidden="true"></span> Log Out</a></li>
+              <li><a href="#"><span class="fa fa-home" aria-hidden="true"></span> Home</a></li>
+              <li><a href="#"><span class="fa fa-comment-o" aria-hidden="true"></span> Messages </a></li>
+              <li><a href="#"><span class="fa fa-question-circle" aria-hidden="true"></span> Help</a></li>
+              <li><a href="#"><span class="fa fa-sign-out" aria-hidden="true"></span> Log Out</a></li>
             </ul>
 
+          </div>
         </div>
-    </div>
-</nav>
-                <div class="row">
-                    <div class="col-lg-12">
-                      <div class="container-fluid">
-                        <h1>Simple Sidebar</h1>
-                        <p>This template has a responsive menu toggling system. The menu will appear collapsed on smaller screens, and will appear non-collapsed on larger screens. When toggled using the button below, the menu will appear/disappear. On small screens, the page content will be pushed off canvas.</p>
-                        <p>Make sure to keep all page content within the <code>#page-content-wrapper</code>.</p>
-                    </div>
-                </div>
-              </div>
-
+      </nav>
+      <div id="page-wrapper" style="min-height:899px">
+        <div class="col-lg-12">
+          <div class="container-fluid">
+            <h1>Simple Sidebar</h1>
+            <p>This template has a responsive menu toggling system. The menu will appear collapsed on smaller screens, and will appear non-collapsed on larger screens. When toggled using the button below, the menu will appear/disappear. On small screens,
+              the page content will be pushed off canvas.</p>
+            <p>Make sure to keep all page content within the <code>#page-content-wrapper</code>.</p>
+          </div>
         </div>
-        <!-- /#page-content-wrapper -->
-        <footer  id="main_footer">
+      </div>
+      <footer id="main_footer">
         <p class="text-muted small"><strong>Sumea Theme </strong> Designed and Created by <a href="http://www.webkom.co">www.webkom.co</a> <span class="text-muted pull-right">© 2009 - 2015. Made by <i class="fa fa-fw fa-heart text-danger"></i> Kielce, Poland.</span></p>
-        </footer>
+      </footer>
     </div>
-    <!-- /#wrapper -->
+    <!-- /#page-content-wrapper -->
 
-    <!-- jQuery -->
-    <script src="./assets/js/jquery.js"></script>
+  </div>
+  <!-- /#wrapper -->
 
-    <!-- Bootstrap Core JavaScript -->
-    <script src="./assets/js/bootstrap.min.js"></script>
+  <!-- jQuery -->
+  <script src="./assets/js/jquery.js"></script>
 
-    <!-- Menu Toggle Script -->
-    <script src="./assets/js/custom.js"></script>
+  <!-- Bootstrap Core JavaScript -->
+  <script src="./assets/js/bootstrap.min.js"></script>
+
+  <!-- Menu Toggle Script -->
+  <script src="./assets/js/custom.js"></script>
 
 </body>
 
